[tool.poetry]
name = "zombie_survivor"
version = "0.1.0"
description = "Zombie Survivor kata implementation in python"
authors = ["Tyler Vick <tyler.vick@leadingagile.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-watch = "^4.2.0"
black = "^22.3.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
